--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^6.8.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "stripe": "^11.8.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13"
